syntax = "proto3";

package v1.ampbv1;

import "v1/ampb/msg_anime_movie.proto";
import "v1/apb/anime_resource.proto";
import "v1/apb/anime_link.proto";
import "v1/nfpb/msg_meta.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/v1/ampb;ampbv1";

message CreateAnimeMovieRequest {
  AnimeMovieRequest          animeMovie       = 1;
  apbv1.AnimeResourceRequest animeResources   = 2;
  apbv1.AnimeLinkRequest     animeLinks       = 3;
  repeated nfpbv1.AnimeMetaRequest animeMetas = 4;
}

message CreateAnimeMovieResponse {
  AnimeMovieResponse          animeMovie       = 1;
  apbv1.AnimeResourceResponse animeResources   = 2;
  apbv1.AnimeLinkResponse     animeLinks       = 3;
  repeated nfpbv1.AnimeMetaResponse animeMetas = 4;
}